--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Video Redact</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600&family=Source+Serif+4:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/src/styles/main.css" />
   <link rel="stylesheet" href="/src/styles/upload.css" />
   <link rel="stylesheet" href="/src/styles/player.css" />
@@ -15,12 +18,17 @@
   <div id="app">
     <!-- Upload Screen -->
     <div id="upload-screen" class="screen active">
+      <button id="upload-theme-toggle" class="floating-theme-btn theme-toggle-btn" title="Toggle light/dark mode">
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="theme-icon-sun"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="18.36" x2="5.64" y2="16.92"></line><line x1="18.36" y1="4.22" x2="19.78" y2="5.64"></line></svg>
+      </button>
       <div class="drop-zone" id="drop-zone">
         <div class="drop-zone-content">
-          <div class="drop-zone-icon">&#9654;</div>
-          <h2>Drop media here</h2>
+          <div class="drop-zone-icon">
+            <svg viewBox="0 0 24 24" width="56" height="56" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>
+          </div>
+          <h2>Drop your media here</h2>
           <p>or click to browse</p>
-          <p class="drop-zone-hint">Videos: MP4, WebM, MOV, MKV | Images: JPG, PNG, WebP, GIF</p>
+          <p class="drop-zone-hint">Supports MP4, WebM, MOV, MKV, JPG, PNG, WebP, GIF</p>
           <input type="file" id="file-input" accept="video/*,image/*,.mkv,.avi,.mov" hidden />
         </div>
       </div>
@@ -52,7 +60,12 @@
           <button id="editing-mode-btn" data-keybind="editingMode">Outlines</button>
           <button id="undo-btn" data-keybind="undo">Undo</button>
           <button id="redo-btn" data-keybind="redo">Redo</button>
-          <button id="settings-btn" title="Settings">&#9881;</button>
+          <button id="theme-toggle" class="theme-toggle-btn" title="Toggle light/dark mode">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="theme-icon-sun"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="18.36" x2="5.64" y2="16.92"></line><line x1="18.36" y1="4.22" x2="19.78" y2="5.64"></line></svg>
+          </button>
+          <button id="settings-btn" title="Settings">
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+          </button>
           <button id="import-btn" title="Import new media">Import</button>
           <button id="export-btn" class="primary-btn">Export</button>
         </div>
@@ -74,18 +87,30 @@
 
       <!-- Playback controls -->
       <div id="playback-controls">
-        <button id="btn-step-back-5" title="Back 5s">&#9194;</button>
-        <button id="btn-step-back" title="Previous frame">&#9664;</button>
-        <button id="btn-play" title="Play/Pause (Space)">&#9654;</button>
-        <button id="btn-step-forward" title="Next frame">&#9654;</button>
-        <button id="btn-step-forward-5" title="Forward 5s">&#9193;</button>
+        <button id="btn-step-back-5" title="Back 5s">
+          <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="11 17 6 12 11 7"></polyline><polyline points="18 17 13 12 18 7"></polyline></svg>
+        </button>
+        <button id="btn-step-back" title="Previous frame">
+          <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
+        </button>
+        <button id="btn-play" title="Play/Pause (Space)">
+          <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
+        </button>
+        <button id="btn-step-forward" title="Next frame">
+          <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
+        </button>
+        <button id="btn-step-forward-5" title="Forward 5s">
+          <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="13 17 18 12 13 7"></polyline><polyline points="6 17 11 12 6 7"></polyline></svg>
+        </button>
         <span id="time-display">00:00.00 / 00:00.00</span>
       </div>
 
       <!-- Timeline -->
       <div id="timeline">
         <div id="timeline-header">
-          <button id="timeline-expand" title="Expand/collapse timeline">&#9650;</button>
+          <button id="timeline-expand" title="Expand/collapse timeline">
+            <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="18 15 12 9 6 15"></polyline></svg>
+          </button>
           <div id="timeline-zoom">
             <button id="zoom-out">-</button>
             <button id="zoom-in">+</button>
@@ -117,7 +142,9 @@
     <div class="modal-content modal-settings">
       <div class="modal-header">
         <h3>Keyboard Shortcuts</h3>
-        <button id="settings-close" class="close-btn">&times;</button>
+        <button id="settings-close" class="close-btn">
+          <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+        </button>
       </div>
       <div id="keybind-list"></div>
       <div class="modal-footer">
